[metadata]
name = MOLInA
version = attr: molina.__version__
author = Ivan Chernyshov, Xena Nikitina
author_email = ivan.chernyshoff@gmail.com, nikitina.xena@gmail.com
description = GUI app for annotation of molecule images
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://pypi.org/project/ilthermopy/
project_urls =
    GitHub = https://github.com/OdanReact/MOLInA
    Bug Tracker = https://github.com/OdanReact/MOLInA/issues
keywords = OCSR molecule image chemical structure recognition
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    DDevelopment Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Multimedia :: Graphics

[options]
#include_package_data = True
packages =
    molina
install_requires =
    pyside6
    molscribe
python_requires = >=3.8

#[options.package_data]
#* = *.csv

[options.entry_points]
console_scripts =
    molina = molina.__main__:main

